--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
             <div class="resume">
                 <a href="#contact">Hire Me</a>
-                <a href="https://wa.me/+918122161072" target="_blank" class="letstalk">Let's Talk</a>
+                <a href="https://wa.me/+918122160172" target="_blank" class="letstalk">Let's Talk</a>
                 <a href="assests/resume/Thasleem Resume.pdf" download class="letstalk">Download Resume</a>
             </div>
 
             <div class="live-github">
                 <a href="https://www.linkedin.com/in/thasleem-a-476085231/" target="_blank"><i class='bx bxl-linkedin-square' ></i><span>LinkedIn</span></a>
                 <a href="https://github.com/Thasleem9" target="_blank"><i class='bx bxl-github' ></i><span>GitHub</span></a>
-                <a href="https://wa.me/+918122161072" target="_blank"><i class='bx bxl-whatsapp' target="_blank"></i><span>WhatsApp</span></a>
+                <a href="https://wa.me/+918122160172" target="_blank"><i class='bx bxl-whatsapp' target="_blank"></i><span>WhatsApp</span></a>
                 <a href="https://www.instagram.com/tassu__tas" target="_blank"><i class='bx bxl-instagram' target="_blank"></i><span>Instagram</span></a>
             </div>
 
@@ -85,13 +85,14 @@
 
                 <p>
                     My name is Thasleem A. I am from Coimbatore district. I have completed my higher studies at
-                    Government High School Kamaradai and cuurently pusuing my undergraduation of Final year at Computer
-                    Science And Engineering from Sri Ranganathar Institute. I have technical skills in programming
+                    Government High School Kamaradai and cuurently pursuing my undergraduation of Final year at Computer
+                    Science And Engineering from Sri Ranganathar Institute Of Engineering And Technology. I have technical skills in programming
                     languages such as python and and i have also done web projects using django and tkinter framework. I
-                    have strong knowledge in python as i have solved mre technical probelms in Python programming
+                    have strong knowledge in python as i have solved more technical probelms in Python programming
                     language. Apart from that i also have a strong foundation in frontend web development such as HTML,
-                    CSS, Bootstrap and JavaScript. I have also done certifications in DataScience and Arificial
-                    Intelligence and Machine Learning. To get to know more about me please click the read more button!!
+                    CSS, Bootstrap and JavaScript. I have also done certifications in DataScience, Arificial
+                    Intelligence and Machine Learning. Apart from studies i have interest in Cooking, Reading books and Travelling. I'm always
+                    looking to connect with others who share my passion for creating new innovations, so let's get in touch!!
                 </p>
 
                 <br> <br> <br> <br>
