about and changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     My name is Thasleem A. I am from Coimbatore district. I have completed my higher studies at
                     Government High School Kamaradai and cuurently pursuing my undergraduation of Final year at Computer
                     Science And Engineering from Sri Ranganathar Institute Of Engineering And Technology. I have technical skills in programming
-                    languages such as python and and i have also done web projects using django and tkinter framework. I
+                    languages such as python and i have also done web projects using django and tkinter framework. I
                     have strong knowledge in python as i have solved more technical probelms in Python programming
                     language. Apart from that i also have a strong foundation in frontend web development such as HTML,
                     CSS, Bootstrap and JavaScript. I have also done certifications in DataScience, Arificial
