--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                 <p>
                     My name is Thasleem A. I am from Coimbatore district. I have completed my higher studies at
-                    Government High School Kamaradai and cuurently pursuing my undergraduation of Final year at Computer
+                    Government High School Kamaradai and currently pursuing my undergraduation of Final year at Computer
                     Science And Engineering from Sri Ranganathar Institute Of Engineering And Technology. I have technical skills in programming
                     languages such as python and i have also done web projects using django and tkinter framework. I
                     have strong knowledge in python as i have solved more technical probelms in Python programming
