School name changes

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
                 <p>
                     My name is Thasleem A. I am from Coimbatore district. I have completed my higher studies at
-                    Government High School Kamaradai and currently pursuing my undergraduation of Final year at Computer
+                    Government High School Karamadai and currently pursuing my undergraduation of Final year at Computer
                     Science And Engineering from Sri Ranganathar Institute Of Engineering And Technology. I have technical skills in programming
                     languages such as python and i have also done web projects using django and tkinter framework. I
-                    have strong knowledge in python as i have solved more technical probelms in Python programming
+                    have strong knowledge in python as i have solved more technical problems in Python programming
                     language. Apart from that i also have a strong foundation in frontend web development such as HTML,
                     CSS, Bootstrap and JavaScript. I have also done certifications in DataScience, Arificial
                     Intelligence and Machine Learning. Apart from studies i have interest in Cooking, Reading books and Travelling. I'm always
